--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 11002, type: ss, cipher: chacha20-ietf-poly1305, password: a997fd8e-59d7-47cf-afe8-2204bd286017}
   - {name: 🇨🇳 台湾-1.00MB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
-  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-558.3KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇬🇧 英国-5.91MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-556.9KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-4.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.82MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -73,14 +73,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
 rules:
