--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 11002, type: ss, cipher: chacha20-ietf-poly1305, password: a997fd8e-59d7-47cf-afe8-2204bd286017}
-  - {name: 🇨🇳 台湾-1.00MB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇬🇧 英国-5.91MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-556.9KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.82MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 未知国家-2.07MB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
+  - {name: 🇨🇳 中国-4.61MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-22.20MB/s(Youtube:不良林), server: xmrh024.xmrth-node.xyz, port: 15887, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh024.xmrth-node.xyz}}
+  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 未知国家-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
